cmake_minimum_required(VERSION 2.8) #Проверка версии CMake.

set(PROJECT_NAME treetablelib) #Создаем обычную локальную переменную с именем проекта
project(${PROJECT_NAME}) # Название проекта

set(app treetable) #Переменная с именем приложения
set(lib treetablelib) #Переменная с именем библиотеки

set(MP2_LIBRARY "${PROJECT_NAME}")
set(MP2_TESTS   "test_${PROJECT_NAME}")

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE) #Создается переменная CMAKE_CONFIGURATION_TYPES со значением "Debug;Release" и меткой/разделом Configs, переменная сохраниется в специальном файле доступном из всех файлов,
if(NOT CMAKE_BUILD_TYPE) # проверка имеющихся у компилятора вариантов сборки
    set(CMAKE_BUILD_TYPE Release) #Если нет то устанавливаем Release
endif()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/treetablelib) #Добавляем директорию "${CMAKE_CURRENT_SOURCE_DIR}/treetablelib" в дополняемые каталоги включаемых файлов
#${CMAKE_CURRENT_SOURCE_DIR} - стандартная переменная с адресом рабочей директории

add_subdirectory(treetable)
add_subdirectory(treetablelib)

add_subdirectory(gtest)
add_subdirectory(test)